Creado elemento main

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <div class="container py-4">
   <h1>Bootstrap Basic Posts</h1>
-
-  <p>Bootstrap <strong data-bs-toggle="tooltip" data-bs-title="Basic">Basic</strong> Posts</p>
-
+  <app-main></app-main>
 </div>
